# rumi

./: .gitignore  CONTRIBUTING.md  HEARTBEAT.md  LICENSE  README.md  RUMI.md  RUMI_cutesy.md  SOUL.md  SOUL_cutesy.md  SOUL_professional.md  TOOLS.md  USER.md  bug_report_json_extraction.md  bug_report_quality_regression.md  claude-code-tui-analysis.md  main.py  prove_rumi_works.py  pyproject.toml  requirements.txt  rumi_launcher.py  rumi_llm.py  rumi_telegram_patch.py  rumi_test_output.txt  rumi_tui.py  run.bat  run.sh  run_discovery.bat  run_discovery.py  run_discovery_v2.py  run_full_pipeline.py  run_grounded_discovery.py  run_space_discovery.py  setup.py  telegram_bot.py  test_discovery.py  test_keys.py  test_orchestrator.py  test_refinement.py  thinking_loop.py  ui.py  (+2 more)
.reflexion_patches/: hypothesis_engine_3a1e9b6d.backup  hypothesis_engine_3a692d84.backup  hypothesis_engine_6ed26ddf.backup  hypothesis_engine_949e63d8.backup  hypothesis_engine_a83513ee.backup  hypothesis_engine_b0653c95.backup  hypothesis_engine_b964494f.backup  hypothesis_engine_c1e52d08.backup  hypothesis_engine_c220f578.backup  hypothesis_engine_c9a53989.backup  hypothesis_engine_cb86c8e8.backup  hypothesis_engine_cd726f69.backup  hypothesis_engine_cf30cdb3.backup  hypothesis_engine_db6d1132.backup
actions/: __init__.py  agency_agent.py  ai_pipeline.py  browser_control.py  code_helper.py  cognitive_coder.py  computer_control.py  desktop.py  dev_agent.py  file_controller.py  paper_search.py  research_pipeline.py  resilience.py  screen_processor.py  verification.py  web_research.py  web_search.py
agent/: error_handler.py  executor.py  planner.py  task_queue.py
brain/: __init__.py  _agi_imports.py  abstraction_engine.py  active_inference.py  agi_orchestrator.py  analogy_engine.py  api_server.py  associative_memory.py  autonomous_planner.py  benchmark_runner.py  causal_reasoner.py  code_evolution.py  code_intelligence.py  code_planner.py  code_reasoning_engine.py  code_reflector.py  code_simulator.py  cognitive_integration.py  cognitive_load.py  creativity_engine.py  curiosity.py  discovery_orchestrator.py  dreaming.py  enhanced_world_model.py  (+40 more)
(+231 files in other folders)
